<resources>
    <string name="app_name">Youtube</string>
    <string name="todo">TODO</string>
    <string name="spam">Spam Spam Spam Spam Spam Spam Spam Spam Spam Spam Spam Spam Spam Spam Spam Spam Spam Spam Spam Spam Spam Spam </string>
    <string name="info">%1$s - %2$s views - %3$s</string>
    <string name="views">8.5M views</string>
    <string name="share">Share</string>
    <string name="download">Download</string>
    <string name="save">Save</string>
    <string name="subscribe">Subscribe</string>
    <string name="pause_video">pause_video</string>
    <string name="play_video">play_video</string>
</resources>